# shared

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Justfile  README.md  SECURITY.md  renovate.json
.github/workflows/: ci.yml  publish-dart.yml  publish-python.yml
brand/: README.md  USAGE.md  generate.sh  palette.css  palette.dart  palette.json  typography.css
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/example/: hello_policy.dart
dart/lib/: screen_steward_shared.dart
dart/test/: i18n_test.dart  schemas_test.dart
locales/en/: pilot.arb  pilot.po
locales/fr/: pilot.arb  pilot.po
proto/: command.proto  device.proto  event.proto  family.proto  policy.proto  usage.proto
python/: README.md  pyproject.toml
python/src/screensteward_shared/: __init__.py
python/tests/: test_hello_policy_roundtrip.py  test_i18n.py  test_schemas.py
scripts/: generate.sh  hello_policy_dart_to_python.sh
